# support-triage-agent

./: .env.example  .gitignore  pyproject.toml  streamlit_app.py
src/triage_agent/: config.py  main.py
src/triage_agent/agents/: loop.py  tools.py  triage.py  types.py
src/triage_agent/llm/: __init__.py  base.py  factory.py  ollama_client.py  openai_client.py
