[project]
name = "support-triage-agent"
version = "0.1.0"
description = "FastAPI-based agentic AI customer support triage system with provider-agnostic LLM support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/triage_agent"]