[project]
name = "support-triage-agent"
version = "0.1.0"
description = "FastAPI-based agentic AI customer support triage system with provider-agnostic LLM support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.47.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/triage_agent"]
